# twitter-watch-flask-mongodb

./: .flaskenv  README.md  docker-compose.yml  pyproject.toml  requirements.txt
counter/: models.py  views.py
data/: barackobama.json  cathiedwood.json  elonmusk.json  replyTo-barackobama.json  replyTo-cathiedwood.json  replyTo-elonmusk.json  replyTo-taylorlorenz.json  replyTo-ylecun.json  taylorlorenz.json  ylecun.json
scripts/: snscraper.py
