[tool.poetry]
name = "twitter-watch-flask-mongodb"
version = "1.0.0"
description = ""
authors = ["hesam rajaei <hesamr76@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "2.0.2"
python-dotenv = "0.19.2"
flask-mongoengine = "1.0.0"
pytest = "6.2.1"
flask_cors = "3.0.10"
snscrape = "0.3.4"
nltk = "3.8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = {version = "^21.7b0", allow-prereleases = true}

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"